--- a/REPORTS/index.html
+++ b/REPORTS/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">GeneralStore Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 29, 2024 05:14:45 PM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 2, 2024 04:06:03 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">formPage</p>
             <p class="text-sm">
-              <span>5:14:58 PM</span> / <span>00:00:14:357</span>
+              <span>4:06:19 PM</span> / <span>00:00:14:680</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">formPage</h5>
-<span class='badge badge-success'>11.29.2024 5:14:58 PM</span>
-<span class='badge badge-danger'>11.29.2024 5:15:12 PM</span>
-<span class='badge badge-default'>00:00:14:357</span>
+<span class='badge badge-success'>12.02.2024 4:06:19 PM</span>
+<span class='badge badge-danger'>12.02.2024 4:06:33 PM</span>
+<span class='badge badge-default'>00:00:14:680</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,9 +105,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:15:12 PM</td>
+        <td>4:06:33 PM</td>
         <td>
-          PASSED
+          TEST PASSED
         </td>
       </tr>
   </tbody>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">productCatalogue</p>
             <p class="text-sm">
-              <span>5:15:12 PM</span> / <span>00:00:16:353</span>
+              <span>4:06:33 PM</span> / <span>00:00:15:868</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">productCatalogue</h5>
-<span class='badge badge-success'>11.29.2024 5:15:12 PM</span>
-<span class='badge badge-danger'>11.29.2024 5:15:29 PM</span>
-<span class='badge badge-default'>00:00:16:353</span>
+<span class='badge badge-success'>12.02.2024 4:06:33 PM</span>
+<span class='badge badge-danger'>12.02.2024 4:06:49 PM</span>
+<span class='badge badge-default'>00:00:15:868</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,9 +146,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:15:29 PM</td>
+        <td>4:06:49 PM</td>
         <td>
-          PASSED
+          TEST PASSED
         </td>
       </tr>
   </tbody>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">cartPage</p>
             <p class="text-sm">
-              <span>5:15:29 PM</span> / <span>00:00:01:949</span>
+              <span>4:06:49 PM</span> / <span>00:00:02:212</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cartPage</h5>
-<span class='badge badge-success'>11.29.2024 5:15:29 PM</span>
-<span class='badge badge-danger'>11.29.2024 5:15:31 PM</span>
-<span class='badge badge-default'>00:00:01:949</span>
+<span class='badge badge-success'>12.02.2024 4:06:49 PM</span>
+<span class='badge badge-danger'>12.02.2024 4:06:51 PM</span>
+<span class='badge badge-default'>00:00:02:212</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,9 +187,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:15:31 PM</td>
+        <td>4:06:51 PM</td>
         <td>
-          PASSED
+          TEST PASSED
         </td>
       </tr>
   </tbody>
@@ -211,13 +211,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 29, 2024 05:14:45 PM</h3>
+<h3>Dec 2, 2024 04:06:03 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 29, 2024 05:15:32 PM</h3>
+<h3>Dec 2, 2024 04:06:52 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -287,7 +287,7 @@
 </div></div>
 <script>
 var timeline = {
-"formPage":14.357,"productCatalogue":16.353,"cartPage":1.949
+"formPage":14.68,"productCatalogue":15.868,"cartPage":2.212
 };
 </script>
 <div class="row">
