--- a/REPORTS/index.html
+++ b/REPORTS/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">GeneralStore Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 13, 2024 01:24:04 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 13, 2025 10:22:05 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">formPage</p>
             <p class="text-sm">
-              <span>1:24:10 PM</span> / <span>00:00:08:089</span>
+              <span>10:22:12 AM</span> / <span>00:00:07:678</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">formPage</h5>
-<span class='badge badge-success'>12.13.2024 1:24:10 PM</span>
-<span class='badge badge-danger'>12.13.2024 1:24:18 PM</span>
-<span class='badge badge-default'>00:00:08:089</span>
+<span class='badge badge-success'>01.13.2025 10:22:12 AM</span>
+<span class='badge badge-danger'>01.13.2025 10:22:20 AM</span>
+<span class='badge badge-default'>00:00:07:678</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:24:18 PM</td>
+        <td>10:22:20 AM</td>
         <td>
           TEST PASSED
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">productCatalogue</p>
             <p class="text-sm">
-              <span>1:24:18 PM</span> / <span>00:00:09:234</span>
+              <span>10:22:20 AM</span> / <span>00:00:10:794</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">productCatalogue</h5>
-<span class='badge badge-success'>12.13.2024 1:24:18 PM</span>
-<span class='badge badge-danger'>12.13.2024 1:24:28 PM</span>
-<span class='badge badge-default'>00:00:09:234</span>
+<span class='badge badge-success'>01.13.2025 10:22:20 AM</span>
+<span class='badge badge-danger'>01.13.2025 10:22:30 AM</span>
+<span class='badge badge-default'>00:00:10:794</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:24:28 PM</td>
+        <td>10:22:30 AM</td>
         <td>
           TEST PASSED
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">cartPage</p>
             <p class="text-sm">
-              <span>1:24:28 PM</span> / <span>00:00:01:430</span>
+              <span>10:22:30 AM</span> / <span>00:00:00:359</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cartPage</h5>
-<span class='badge badge-success'>12.13.2024 1:24:28 PM</span>
-<span class='badge badge-danger'>12.13.2024 1:24:29 PM</span>
-<span class='badge badge-default'>00:00:01:430</span>
+<span class='badge badge-success'>01.13.2025 10:22:30 AM</span>
+<span class='badge badge-danger'>01.13.2025 10:22:31 AM</span>
+<span class='badge badge-default'>00:00:00:359</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:24:29 PM</td>
+        <td>10:22:31 AM</td>
         <td>
           TEST PASSED
         </td>
@@ -211,13 +211,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 13, 2024 01:24:04 PM</h3>
+<h3>Jan 13, 2025 10:22:05 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 13, 2024 01:24:29 PM</h3>
+<h3>Jan 13, 2025 10:22:31 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -287,7 +287,7 @@
 </div></div>
 <script>
 var timeline = {
-"formPage":8.089,"productCatalogue":9.234,"cartPage":1.43
+"formPage":7.678,"productCatalogue":10.794,"cartPage":0.359
 };
 </script>
 <div class="row">
