--- a/REPORTS/index.html
+++ b/REPORTS/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">GeneralStore Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 27, 2025 10:21:41 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 31, 2025 03:38:26 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">formPage</p>
             <p class="text-sm">
-              <span>10:21:49 AM</span> / <span>00:00:07:779</span>
+              <span>3:38:34 PM</span> / <span>00:00:09:553</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">formPage</h5>
-<span class='badge badge-success'>01.27.2025 10:21:49 AM</span>
-<span class='badge badge-danger'>01.27.2025 10:21:56 AM</span>
-<span class='badge badge-default'>00:00:07:779</span>
+<span class='badge badge-success'>01.31.2025 3:38:34 PM</span>
+<span class='badge badge-danger'>01.31.2025 3:38:44 PM</span>
+<span class='badge badge-default'>00:00:09:553</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:21:56 AM</td>
+        <td>3:38:44 PM</td>
         <td>
           TEST PASSED
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">productCatalogue</p>
             <p class="text-sm">
-              <span>10:21:56 AM</span> / <span>00:00:10:107</span>
+              <span>3:38:44 PM</span> / <span>00:00:10:144</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">productCatalogue</h5>
-<span class='badge badge-success'>01.27.2025 10:21:56 AM</span>
-<span class='badge badge-danger'>01.27.2025 10:22:06 AM</span>
-<span class='badge badge-default'>00:00:10:107</span>
+<span class='badge badge-success'>01.31.2025 3:38:44 PM</span>
+<span class='badge badge-danger'>01.31.2025 3:38:54 PM</span>
+<span class='badge badge-default'>00:00:10:144</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:22:06 AM</td>
+        <td>3:38:54 PM</td>
         <td>
           TEST PASSED
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">cartPage</p>
             <p class="text-sm">
-              <span>10:22:06 AM</span> / <span>00:00:01:639</span>
+              <span>3:38:54 PM</span> / <span>00:00:01:723</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cartPage</h5>
-<span class='badge badge-success'>01.27.2025 10:22:06 AM</span>
-<span class='badge badge-danger'>01.27.2025 10:22:08 AM</span>
-<span class='badge badge-default'>00:00:01:639</span>
+<span class='badge badge-success'>01.31.2025 3:38:54 PM</span>
+<span class='badge badge-danger'>01.31.2025 3:38:56 PM</span>
+<span class='badge badge-default'>00:00:01:723</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:22:08 AM</td>
+        <td>3:38:56 PM</td>
         <td>
           TEST PASSED
         </td>
@@ -211,13 +211,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 27, 2025 10:21:41 AM</h3>
+<h3>Jan 31, 2025 03:38:26 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 27, 2025 10:22:09 AM</h3>
+<h3>Jan 31, 2025 03:38:56 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -287,7 +287,7 @@
 </div></div>
 <script>
 var timeline = {
-"formPage":7.779,"productCatalogue":10.107,"cartPage":1.639
+"formPage":9.553,"productCatalogue":10.144,"cartPage":1.723
 };
 </script>
 <div class="row">
