--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="649a64">  <td>24/12/13 13:21:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUP()[pri:0, instance:GeneralStore.TestCases.TestExecution@7d900ecf]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="649a64">  <td>24/12/13 13:22:07</td>   <td>26463</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.TestExecution@7d900ecf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="71f9e9">  <td>24/12/13 13:21:56</td>   <td>15574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.productCatalogue()[pri:0, instance:GeneralStore.TestCases.TestExecution@7d900ecf]">productCatalogue</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="71f9e9">  <td>24/12/13 13:22:06</td>   <td>24927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.cartPage()[pri:0, instance:GeneralStore.TestCases.TestExecution@7d900ecf]">cartPage</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="71f9e9">  <td>24/12/13 13:21:48</td>   <td>7485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.formPage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:GeneralStore.TestCases.TestExecution@7d900ecf]">formPage</td> 
-  <td>main@271095942</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>25/01/31 15:38:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUP()[pri:0, instance:GeneralStore.TestCases.TestExecution@6f53b8a]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="6bcf94">  <td>25/01/31 15:38:54</td>   <td>27612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.cartPage()[pri:0, instance:GeneralStore.TestCases.TestExecution@6f53b8a]">cartPage</td> 
+  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>25/01/31 15:38:56</td>   <td>29338</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.TestExecution@6f53b8a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="6bcf94">  <td>25/01/31 15:38:44</td>   <td>17465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.productCatalogue()[pri:0, instance:GeneralStore.TestCases.TestExecution@6f53b8a]">productCatalogue</td> 
+  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="6bcf94">  <td>25/01/31 15:38:34</td>   <td>7890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.formPage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:GeneralStore.TestCases.TestExecution@6f53b8a]">formPage</td> 
+  <td>main@1930240356</td>   <td></td> </tr>
 </table>
